--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vueuse/core": "^10.4.1",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "moment": "^2.30.1",
     "nuxt": "^3.14.0",
     "nuxt-icon": "^0.5.0",
     "sass": "^1.77.8",
