--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vueuse/core": "^10.4.1",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "dayjs": "^1.11.13",
     "moment": "^2.30.1",
     "nuxt": "^3.14.0",
     "nuxt-icon": "^0.5.0",
@@ -23,6 +24,6 @@
     "sweetalert2": "^11.11.0",
     "universal-cookie": "^7.2.1",
     "vue": "latest",
-    "vue-router": "latest"
+    "vue-router": "^4.5.0"
   }
 }
